--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li><a href="#skills">Skills</a></li>
             <li><a href="#education">Education</a></li>
             <li><a href="#work">Work</a></li>
-            <li><a href="#blogs">Blogs</a></li>
+            <li><a href="#blog">Blogs</a></li>
             <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -97,13 +97,13 @@
               <p><span> phone : </span> +91 XXX-XXX-XXXX</p>
             </div> -->
             <div class="box">
-              <p><span> email : </span> sharmapurushotam@hotmail.com</p>
-              <p><span> place : </span> Gujarat, India - 388421</p>
+              <p><span> email : </span> sharmapurushotam57@gmail.com</p>
+              <p><span> place : </span> Gujarat, India - 395010</p>
             </div>
         </div>
         
         <div class="resumebtn">
-            <a href="https://drive.google.com/file/d/14yS8pd9Usd3ji2nApBtbZ3UOI5DgHQHS/view" target="_blank" class="btn"><span>Resume</span>
+            <a href="https://drive.google.com/file/d/1TTsOqkV1LJS_PRzWSDi6yQEJv3YwLp7M/view?usp=sharing" target="_blank" class="btn"><span>Resume</span>
                 <i class="fas fa-chevron-right"></i>
             </a>
         </div>
@@ -114,23 +114,91 @@
 <!-- about section ends -->
 
 <!-- skills section starts -->
+   <style>
+        .skills {
+            text-align: center;
+        }
+
+        .bar {
+            display: inline-block;
+            margin: 10px;
+            transition: filter 0.3s ease-in-out;
+        }
+
+        .bar:hover {
+            filter: brightness(1.3); /* Adjust the brightness value as needed */
+        }
+
+        .bar img {
+            width: 64px; /* Adjust the width as needed */
+            height: 64px; /* Adjust the height as needed */
+            transition: transform 0.3s ease-in-out;
+        }
+
+        .bar:hover img {
+            transform: scale(1.1); /* Adjust the scale value as needed */
+        }
+
+        .bar span {
+            display: block;
+            margin-top: 5px;
+            font-size: 14px; /* Adjust the font size as needed */
+        }
+    </style>
 <section class="skills" id="skills">
-
-    <h2 class="heading"><i class="fas fa-laptop-code"></i> Skills & <span>Abilities</span></h2>
-
-    <div class="container">
-          <div class="row" id="skillsContainer">
-
-            <!-- <div class="bar">
+  <h2 class="heading"><i class="fas fa-laptop-code"></i> Skills & <span>Abilities</span></h2>
+  <div class="container">
+      <div class="row" id="skillsContainer">
+          
+          <div class="bar">
               <div class="info">
-                <img src="https://img.icons8.com/color/48/000000/adobe-xd.png"/>
-                <span>AdobeXD</span>
+                  <img src="https://img.icons8.com/color/48/000000/html-5.png" alt="HTML5"/>
+                  <span>HTML 5</span>
               </div>
-            </div> -->
-
+          </div>
+          <div class="bar">
+              <div class="info">
+                  <img src="https://img.icons8.com/nolan/64/amazon-web-services.png" alt="Amazon Web Services"/>
+                  <span>AWS</span>
+              </div>
+          </div>
+          <div class="bar">
+              <div class="info">
+                  <img src="https://img.icons8.com/color/48/000000/jenkins.png" alt="Jenkins"/>
+                  <span>Jenkins</span>
+              </div>
+          </div>
+          <div class="bar">
+              <div class="info">
+                  <img src="https://img.icons8.com/color/48/000000/kubernetes.png" alt="Kubernetes"/>
+                  <span>Kubernetes</span>
+              </div>
+          </div>
+          <div class="bar">
+              <div class="info">
+                  <img src="https://img.icons8.com/color/48/000000/docker.png" alt="Docker"/>
+                  <span>Docker</span>
+              </div>
+          </div>
+          <div class="bar">
+              <div class="info">
+                  <img src="https://img.icons8.com/color/48/000000/linux.png" alt="Linux"/>
+                  <span>Linux</span>
+              </div>
+          </div>
+          <div class="bar">
+              <div class="info">
+                  <img src="https://img.icons8.com/external-tal-revivo-regular-tal-revivo/96/external-nginx-accelerates-content-and-application-delivery-improves-security-logo-regular-tal-revivo.png" alt="Nginx"/>
+                  <span>Nginx</span>
+              </div>
+          </div>
       </div>
-</div>
+  </div>
 </section>
+
+
+
+
 <!-- skills section ends -->
 
 
@@ -178,96 +246,43 @@
 </section>
 <!-- work project section ends -->
 
-<!-- experience section starts -->
-<!-- <section class="experience" id="experience">
+<!-- Add this section to your HTML -->
+<style>
+  .blog {
+    padding: 80px 0;
+    background-color: #f8f8f8;
+ }
+ 
+ .blog h2 {
+    text-align: center;
+    margin-bottom: 40px;
+ }
+ 
+ .blogContainer {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+ }
+ 
+ .blogPost {
+    width: 30%;
+    margin-bottom: 30px;
+ }
+</style>
+<section class="blog" id="blog">
+  <h2 class="heading"><i class="fas fa-book-open"></i> Blog</h2>
 
-  <h2 class="heading"><i class="fas fa-briefcase"></i> Experience </h2>
-
-  <div class="timeline">
-
-    <div class="container right">
-      <div class="content">
-        <div class="tag">
-          <h2>Self Employed</h2>
-        </div>
-        <div class="desc">
-            <h3>Full Stack Developer</h3>
-            <p>Oct 2021 - present</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container left">
-      <div class="content">
-        <div class="tag">
-          <h2>Mapstreak Flyseas</h2>
-        </div>
-        <div class="desc">
-            <h3>Web Developer | Internship</h3>
-            <p>June 2021 - Dec 2021</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container right">
-      <div class="content">
-        <div class="tag">
-          <h2>The Spark Foundation</h2>
-        </div>
-        <div class="desc">
-            <h3>Website Developer | Internship</h3>
-            <p>May 2021 - June 2021</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container left">
-      <div class="content">
-        <div class="tag">
-          <h2>The Spark Foundation</h2>
-        </div>
-        <div class="desc">
-            <h3>Mobile Application Developer | Internship</h3>
-            <p>April 2021 - May 2021</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container right">
-      <div class="content">
-        <div class="tag">
-          <h2>Frshr Technologies</h2>
-        </div>
-        <div class="desc">
-            <h3>Wordpress Developer | Internship</h3>
-            <p>April 2021 - April 2021</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container left">
-      <div class="content">
-        <div class="tag">
-          <h2>WonderingBlog</h2>
-        </div>
-        <div class="desc">
-            <h3>Web Development & SEO | Internship</h3>
-            <p>March 2021 - April 2021</p>
-        </div>
-      </div>
-    </div>
+  <div class="container">
+     <div class="row" id="blogContainer">
+        <!-- Blog posts will go here -->
+     </div>
   </div>
-
-  <div class="morebtn">
-    <a href="/experience" class="btn"><span>View All</span>
-      <i class="fas fa-arrow-right"></i>
-  </a>
-  </div>
-
-</div>
-
 </section>
-experience section ends -->
+
+<script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
+<script src="blog.js"></script>
+
+
 
 <!-- contact section starts -->
 <section class="contact" id="contact">
