--- a/projects/index.html
+++ b/projects/index.html
@@ -24,7 +24,7 @@
             <li><a href="/#skills">Skills</a></li>
             <li><a href="/#education">Education</a></li>
             <li><a class="active" href="/#work">Work</a></li>
-
+            <li><a class="active" href="/#blogs">Blogs</a></li>
             <li><a href="/#contact">Contact</a></li>
             </ul>
         </nav>
@@ -39,14 +39,14 @@
   <div id="filters" class="button-group">
     <button class="btn is-checked" data-filter="*">All Projects</button>
     <button class="btn" data-filter=".mern">MERN Stack</button>
-    <button class="btn" data-filter=".lamp">LAMP Stack</button>
+
     <button class="btn" data-filter=".basicweb">Basic Web</button>
-    <button class="btn" data-filter=".android">Android App</button>
+    <button class="btn" data-filter=".android">Deployment</button>
   </div>
 
   <div class="box-container">
 
-    <!-- <div class="box tilt">
+ <div class="box tilt">
       <img src="/assets/images/projects/agecalc.PNG" alt="" />
       <div class="content">
         <div class="tag">
@@ -60,7 +60,7 @@
           </div>
         </div>
       </div>
-    </div> -->   
+    </div> 
 
   </div>
 
